apps/services/grill-stats/overlays/dev/patches/dev-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grill-stats
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: grill-stats
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
