apps/services/grill-stats/overlays/dev/patches/device-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
  namespace: grill-stats-dev
spec:
  template:
    spec:
      containers:
      - name: device-service
