apps/services/grill-stats/overlays/dev/patches/grill-stats-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grill-stats
  namespace: grill-stats-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: grill-stats
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
