apps/services/grill-stats/overlays/dev/patches/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grill-stats
spec:
  replicas: 1
