apps/services/grill-stats/overlays/dev/patches/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
spec:
  template:
    spec:
      containers:
      - name: device-service
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-service
spec:
  template:
    spec:
      containers:
      - name: temperature-service
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
spec:
  template:
    spec:
      containers:
      - name: influxdb
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 512Mi
