apps/services/grill-stats/overlays/dev/patches/temperature-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-service
  namespace: grill-stats-dev
spec:
  template:
    spec:
      containers:
      - name: temperature-service
